src/test/resources/rules/fail/BadClassName.java
package rules.fail;

public class BadClassName {
    public static void main(String[] args) {}

    class bad_class_name {
    }
}